# graphql-train

./: .gitignore  Cargo.toml  README.md  cspell.json  pyproject.toml  test.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: CI.yml
python/fast_graphql/: __init__.py
python/tests/: test_all.py
src/: lib.rs
