[package]
name = "fast_graphql"
version = "0.1.0"
edition = "2021"

[lib]
name = "_fast_graphql"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "stub_gen"
doc = false

[dependencies]
async-graphql = { version = "7.0.13", features = ["dynamic-schema"] }
pyo3 = { version = "0.23.4", features = ["abi3-py39", "experimental-async"] }
pyo3-async-runtimes = { version = "0.23.0", features = ["tokio-runtime"] }
pyo3-stub-gen = "0.6.2"
