[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "fast_graphql"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[project.optional-dependencies]
tests = ["pytest"]

[tool.maturin]
python-source = "python"
module-name = "fast_graphql._fast_graphql"
bindings = "pyo3"
features = ["pyo3/extension-module"]
